<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soniclair_background"
    android:orientation="vertical"
    tools:context="tech.logica10.soniclair.fragments.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/soniclair_item_highlight"
        app:hintTextColor="#fff"
        android:textColorHint="#fff"
        android:backgroundTint="@color/soniclair_item_highlight"
        android:foregroundTint="#fff"
        app:boxBackgroundColor="@color/soniclair_item_highlight">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/soniclair_item_highlight"
            app:backgroundTint="@color/soniclair_item_highlight"
            android:fontFamily="@font/montserrat"
            android:foregroundTint="#fff"
            android:textColorHighlight="#fff"
            android:hint="@string/search"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="#fff" />
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_search_albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/albums_header"
                android:textColor="#fff"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_albums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/header_search_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/songs_header"
                android:textColor="#fff"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>